--- a/AppDev2ndCW/Views/Users/LongStocked.cshtml
+++ b/AppDev2ndCW/Views/Users/LongStocked.cshtml
@@ -21,43 +21,83 @@
             <div class="col-lg-11 mx-auto">
                 <div class="card rounded shadow border-0">
                     <div class="card-body p-5 bg-white rounded">
+                        <!--reponsive table-->
                         <div class="table-responsive">
-                            <table id="example" style="width:100%" class="table table-striped table-bordered">
+                            <table class="table m-0">
                                 <thead>
                                     <tr>
                                         <th scope="col">#</th>
                                         <th scope="col">Title</th>
-                                        <th scope="col">Author</th>
-                                        <th scope="col">Category</th>
+                                        <th scope="col">Stock Quantity</th>
+                                        @*<th scope="col">Author</th>
+                                        <th scope="col">Category</th>*@
                                         <th scope="col">Price</th>
                                         <th scope="col">Stocked Date</th>
-                                        <th scope="col">Stock Quantity</th>
                                         <th scope="col">Sales Date</th>
+                                        <th scope="col">Delete</th>
                                     </tr>
                                 </thead>
                                 <tbody>
                                     @foreach (var item in Model)
                                     {
-                                        <tr>
-                                            <td>@item.Id</td>
-                                            <td>@item.Book_name</td>
-                                            <td>@item.Author_Id</td>
-                                            <td>@item.Category_Id</td>
-                                            <td>@item.Price</td>
-                                            <td>@item.Stocked_Date</td>
-                                            <td>@item.Stock_Quantity</td>
-                                            <td>@item.Sales_Date</td>
-                                            <th>
-                                                <a href="@Url.ActionLink("UpdateBooks", "Books")" class="btn btn-success btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-edit"></i></a>
-                                            </th>
-                                            <th>
-                                                <a href="@Url.Action("DeleteBooksInventory","Books",new { item.Id} )" class="btn btn-danger btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Delete"><i class="fa fa-trash"></i></a>
-                                            </th>
-                                        </tr>
+                                    <tr>
+                                        <td>@item.Id</td>
+                                        <td>@item.Book_name</td>
+                                        <td>@item.Stock_Quantity</td>
+                                        @*<td>@item.Author_Id</td>
+                                        <td>@item.Category_Id</td>*@
+                                        <td>@item.Price</td>
+                                        <td>@item.Stocked_Date</td>
+                                        <td>@item.Sales_Date</td>
+                                        @*<th>
+                                            <a href="@Url.ActionLink("UpdateBooks", "Books")" class="btn btn-success btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-edit"></i></a>
+                                        </th>*@
+                                        <th>
+                                            <a href="@Url.Action("DeleteBooksInventory","Books",new { item.Id} )" class="btn btn-danger btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Delete"><i class="fa fa-trash"></i></a>
+                                        </th>
+                                    </tr>
                                     }
                                 </tbody>
                             </table>
+
                         </div>
+                        @*<div class="table-responsive">
+            <table id="example" style="width:100%" class="table table-striped table-bordered">
+                <thead>
+                    <tr>
+                        <th scope="col">#</th>
+                        <th scope="col">Title</th>
+                        <th scope="col">Author</th>
+                        <th scope="col">Category</th>
+                        <th scope="col">Price</th>
+                        <th scope="col">Stocked Date</th>
+                        <th scope="col">Stock Quantity</th>
+                        <th scope="col">Sales Date</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>@item.Id</td>
+                            <td>@item.Book_name</td>
+                            <td>@item.Author_Id</td>
+                            <td>@item.Category_Id</td>
+                            <td>@item.Price</td>
+                            <td>@item.Stocked_Date</td>
+                            <td>@item.Stock_Quantity</td>
+                            <td>@item.Sales_Date</td>
+                            <th>
+                                <a href="@Url.ActionLink("UpdateBooks", "Books")" class="btn btn-success btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-edit"></i></a>
+                            </th>
+                            <th>
+                                <a href="@Url.Action("DeleteBooksInventory","Books",new { item.Id} )" class="btn btn-danger btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Delete"><i class="fa fa-trash"></i></a>
+                            </th>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>*@
                     </div>
                 </div>
             </div>
