--- a/AppDev2ndCW/Views/Admin/ManageCustomers.cshtml
+++ b/AppDev2ndCW/Views/Admin/ManageCustomers.cshtml
@@ -76,7 +76,7 @@
                                         <td>
                                             <ul class="list-inline m-0">
                                                 <li class="list-inline-item">
-                                                    <a href="@Url.ActionLink("Profile", "Customer")" class="btn btn-warning btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="View Orders History"><i class="fa fa-table"></i></a>
+                                                    <a href="@Url.ActionLink("Profile", "Customer", new { item.Id} )" class="btn btn-warning btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="View Orders History"><i class="fa fa-table"></i></a>
                                                 </li>
                                                 <li class="list-inline-item">
                                                     <a href="@Url.ActionLink("UpdateCustomers", "Admin", new { item.Id})" class="btn btn-success btn-sm rounded-0" type="button" data-toggle="tooltip" data-placement="top" title="Edit"><i class="fa fa-edit"></i></a>
