--- a/AppDev2ndCW/Views/Customer/Profile.cshtml
+++ b/AppDev2ndCW/Views/Customer/Profile.cshtml
@@ -21,7 +21,7 @@
                                     </strong>
                                 </td>
                                 <td class="text-primary">
-                                    123
+                                    @ViewBag.customer_data.Id
                                 </td>
                             </tr>
                             <tr>
@@ -32,7 +32,7 @@
                                     </strong>
                                 </td>
                                 <td class="text-primary">
-                                    Sam John
+                                    @ViewBag.customer_data.Customer_Name
                                 </td>
                             </tr>
 
@@ -45,7 +45,7 @@
                                     </strong>
                                 </td>
                                 <td class="text-primary">
-                                    Standard
+                                    @ViewBag.customer_data.Member_Type
                                 </td>
                             </tr>
                             <tr>
@@ -56,7 +56,7 @@
                                     </strong>
                                 </td>
                                 <td class="text-primary">
-                                    admin@admin.com
+                                   @ViewBag.customer_data.Customer_Email
                                 </td>
                             </tr>
                             <tr>
@@ -67,7 +67,7 @@
                                     </strong>
                                 </td>
                                 <td class="text-primary">
-                                    20 April, 2021
+                                    @ViewBag.customer_data.Last_Purchased_Date
                                 </td>
                             </tr>
                         </tbody>
