--- a/AppDev2ndCW/Views/Sales/List.cshtml
+++ b/AppDev2ndCW/Views/Sales/List.cshtml
@@ -40,12 +40,14 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-
+                                    @foreach (var item in Model)
+                                    {
                                     <tr>
-                                        <th>Sale 101</th>
-                                        <td>26 April, 2021</td>
-                                        <td>Rs 1500</td>
-                                        <td>9813029480</td>
+
+                                        <th>@item.Id</th>
+                                        <td>@item.Sale_Date</td>
+                                        <td>@item.Sale_Total</td>
+                                        <td>@item.Customer_Id</td>
                                         <td>
                                             <ul class="list-inline m-0">
                                                 <li class="list-inline-item">
@@ -57,6 +59,8 @@
                                             </ul>
                                         </td>
                                     </tr>
+                                    }
+                                    
 
                                 </tbody>
                             </table>
