--- a/AppDev2ndCW/Views/Sales/GenerateBill.cshtml
+++ b/AppDev2ndCW/Views/Sales/GenerateBill.cshtml
@@ -1,138 +1,150 @@
-﻿@{ 
+﻿@{
     Layout = "_DashboardLayout";
 }
 
 
 
-<div class="page-content container p-5">
-    <div class="page-header text-blue-d2">
-        <h1 class="page-title text-primary-d1">
-            Invoice
-            <small class="page-info">
-                <i class="fa fa-angle-double-right text-80"></i>
-                ID: #111-222
-            </small>
-        </h1>
-    </div>
+    <div class="page-content container p-5">
+        <div class="page-header text-blue-d2">
+            <h1 class="page-title text-primary-d1">
+                Invoice
+                <small class="page-info">
+                    <i class="fa fa-angle-double-right text-80"></i>
+                    ID: @ViewBag.customer_data.Id
+                </small>
+            </h1>
+        </div>
 
-    <div class="container px-0">
-        <div class="row mt-4">
-            <div class="col-12 col-lg-10 offset-lg-1">
-                <div class="row">
-                    <div class="col-3 mx-auto p-4">
-                        <img src="~/img/receipt.svg" alt="Receipt SVG" class="img-fluid" />
+        <div class="container px-0">
+            <div class="row mt-4">
+                <div class="col-12 col-lg-10 offset-lg-1">
+                    <div class="row">
+                        <div class="col-3 mx-auto p-4">
+                            <img src="~/img/receipt.svg" alt="Receipt SVG" class="img-fluid" />
+                        </div>
                     </div>
-                </div>
-                <!-- .row -->
+                    <!-- .row -->
 
-                <hr class="row brc-default-l1 mx-n1 mb-4" />
+                    <hr class="row brc-default-l1 mx-n1 mb-4" />
 
-                <div class="row">
-                    <div class="col-sm-6">
+                    <div class="row">
+                        <div class="col-sm-6">
+                            <div>
+                                <span class="text-sm text-grey-m2 align-middle">To:</span>
+                                <span class="text-600 text-110 text-blue align-middle">@ViewBag.customer_data.Customer_Name</span>
+                            </div>
+                            <div class="text-grey-m2">
+                                @*<div class="my-1">
+                                        Street, City
+                                    </div>*@
+                                <div class="my-1">
+                                    @ViewBag.customer_data.Customer_Address
+                                </div>
+                                <div class="my-1"><i class="fa fa-phone fa-flip-horizontal text-primary"></i> <b class="text-600">@ViewBag.customer_dataCustomer_Contact.</b></div>
+                            </div>
+                        </div>
+                        <!-- /.col -->
+
+                        <div class="text-95 col-sm-6 align-self-start d-sm-flex justify-content-end">
+                            <hr class="d-sm-none" />
+                            <div class="text-grey-m2">
+                                <div class="mt-1 mb-2 text-primary-m1 text-600 text-125">
+                                    Invoice
+                                </div>
+
+                                <div class="my-2"><i class="fa fa-circle text-blue-m2 text-xs mr-1"></i> <span class="text-600 text-90">ID:</span> @ViewBag.data.Id</div>
+
+                                <div class="my-2"><i class="fa fa-circle text-blue-m2 text-xs mr-1"></i> <span class="text-600 text-90">Issue Date:</span> @ViewBag.data.Sale_Date</div>
+
+                                <div class="my-2"><i class="fa fa-circle text-blue-m2 text-xs mr-1"></i> <span class="text-600 text-90">Status:</span> <span class="badge badge-warning badge-pill px-25">Unpaid</span></div>
+                            </div>
+                        </div>
+                        <!-- /.col -->
+                    </div>
+
+                    <div class="mt-4">
+
+                        <div class="row border-b-2 brc-default-l2"></div>
+                        <div class="table-responsive">
+                            <table class="table table-striped table-borderless border-0 border-b-2 brc-default-l1">
+                                <thead class="bg-primary">
+                                    <tr class="text-white">
+                                        <th class="opacity-2">#</th>
+                                        <th>Item</th>
+                                        <th>Qty</th>
+                                        <th>Unit Price</th>
+                                        <th width="140">Amount</th>
+                                    </tr>
+                                </thead>
+
+                                <tbody class="text-95 text-primary-d3">
+                                    @foreach (var saleItem in ViewBag.totalSaleData)
+                                    {
+                                        <tr>
+                                            <td>@saleItem.saleItemData.Id</td>
+                                            <td>@saleItem.books.Book_name</td>
+                                            <td>@saleItem.saleItemData.Quantity</td>
+                                            <td class="text-95">@saleItem.books.Price</td>
+                                            <td class="text-primary-d2">@saleItem.saleItemData.Total</td>
+                                        </tr>
+                                    }
+
+                                </tbody>
+                            </table>
+                        </div>
+
+                        <div class="row mt-3">
+                            <div class="col-12 col-sm-7 text-grey-d2 text-95 mt-2 mt-lg-0">
+                                Extra note such as company or payment information...
+                            </div>
+
+                            <div class="col-12 col-sm-5 text-grey text-90 order-first order-sm-last">
+                                <div class="row my-2">
+                                    <div class="col-7 text-right">
+                                        SubTotal
+                                    </div>
+                                    <div class="col-5">
+                                        <span class="text-120 text-primary-d1" id="totalPriceAmount">@ViewBag.totalPriceAmount</span>
+                                    </div>
+                                </div>
+
+                                <div class="row my-2">
+                                    <div class="col-7 text-right">
+                                        Tax (10%)
+                                    </div>
+                                    <div class="col-5">
+                                        <span class="text-110 text-primary-d1">$225</span>
+                                    </div>
+                                </div>
+
+                                <div class="row my-2 align-items-center bgc-primary-l3 p-2">
+                                    <div class="col-7 text-right">
+                                        Total Amount
+                                    </div>
+                                    <div class="col-5">
+                                        <span class="text-150 text-success-d3 opacity-2">$2,475</span>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+
+                        <hr />
+
                         <div>
-                            <span class="text-sm text-grey-m2 align-middle">To:</span>
-                            <span class="text-600 text-110 text-blue align-middle">Alex Doe</span>
+                            <span class="text-primary-d1 text-105">Thank you for your business</span>
+                            <a href="javascript:history.go(-1)" class="btn btn-primary btn-bold px-4 float-right mt-3 mt-lg-0">Add More <i class="fas fa-angle-double-left"></i></a>
                         </div>
-                        <div class="text-grey-m2">
-                            <div class="my-1">
-                                Street, City
+                        <form action="/Sales/EditSales/@ViewBag.data.Id" >
+                            <div>
+                                <input name="sale_date" value="@ViewBag.data.Sale_Date" type="hidden">
+                                <input name="customer_id" value="@ViewBag.data.Customer_Id" type="hidden">
+                                <input name="totalPriceAmount" value="@ViewBag.totalPriceAmount" type="hidden">
+                                <button class="btn btn-primary btn-bold px-4 float-right mt-3 mt-lg-0">Confirm <i class="fas fa-angle-double-left"></i></button>
                             </div>
-                            <div class="my-1">
-                                State, Country
-                            </div>
-                            <div class="my-1"><i class="fa fa-phone fa-flip-horizontal text-primary"></i> <b class="text-600">111-111-111</b></div>
-                        </div>
-                    </div>
-                    <!-- /.col -->
-
-                    <div class="text-95 col-sm-6 align-self-start d-sm-flex justify-content-end">
-                        <hr class="d-sm-none" />
-                        <div class="text-grey-m2">
-                            <div class="mt-1 mb-2 text-primary-m1 text-600 text-125">
-                                Invoice
-                            </div>
-
-                            <div class="my-2"><i class="fa fa-circle text-blue-m2 text-xs mr-1"></i> <span class="text-600 text-90">ID:</span> #111-222</div>
-
-                            <div class="my-2"><i class="fa fa-circle text-blue-m2 text-xs mr-1"></i> <span class="text-600 text-90">Issue Date:</span> Oct 12, 2019</div>
-
-                            <div class="my-2"><i class="fa fa-circle text-blue-m2 text-xs mr-1"></i> <span class="text-600 text-90">Status:</span> <span class="badge badge-warning badge-pill px-25">Unpaid</span></div>
-                        </div>
-                    </div>
-                    <!-- /.col -->
-                </div>
-
-                <div class="mt-4">
-
-                    <div class="row border-b-2 brc-default-l2"></div>
-                    <div class="table-responsive">
-                        <table class="table table-striped table-borderless border-0 border-b-2 brc-default-l1">
-                            <thead class="bg-primary">
-                                <tr class="text-white">
-                                    <th class="opacity-2">#</th>
-                                    <th>Item</th>
-                                    <th>Qty</th>
-                                    <th>Unit Price</th>
-                                    <th width="140">Amount</th>
-                                </tr>
-                            </thead>
-
-                            <tbody class="text-95 text-primary-d3">
-                                <tr></tr>
-                                <tr>
-                                    <td>1</td>
-                                    <td>Golaith Must Fall</td>
-                                    <td>2</td>
-                                    <td class="text-95">$10</td>
-                                    <td class="text-primary-d2">$20</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </div>
-
-                    <div class="row mt-3">
-                        <div class="col-12 col-sm-7 text-grey-d2 text-95 mt-2 mt-lg-0">
-                            Extra note such as company or payment information...
-                        </div>
-
-                        <div class="col-12 col-sm-5 text-grey text-90 order-first order-sm-last">
-                            <div class="row my-2">
-                                <div class="col-7 text-right">
-                                    SubTotal
-                                </div>
-                                <div class="col-5">
-                                    <span class="text-120 text-primary-d1">$2,250</span>
-                                </div>
-                            </div>
-
-                            <div class="row my-2">
-                                <div class="col-7 text-right">
-                                    Tax (10%)
-                                </div>
-                                <div class="col-5">
-                                    <span class="text-110 text-primary-d1">$225</span>
-                                </div>
-                            </div>
-
-                            <div class="row my-2 align-items-center bgc-primary-l3 p-2">
-                                <div class="col-7 text-right">
-                                    Total Amount
-                                </div>
-                                <div class="col-5">
-                                    <span class="text-150 text-success-d3 opacity-2">$2,475</span>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <hr />
-
-                    <div>
-                        <span class="text-primary-d1 text-105">Thank you for your business</span>
-                        <a href="javascript:history.go(-1)" class="btn btn-primary btn-bold px-4 float-right mt-3 mt-lg-0">Go back <i class="fas fa-angle-double-left"></i></a>
+                        </form>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
+   
